fix: 修复首页图片不显示的问题

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8"/>
   <title>动漫 介绍</title>
-  <link rel="stylesheet" type="text/css" href="../css/index.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/head.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/bottom.css"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css"/>
+  <link rel="stylesheet" type="text/css" href="css/head.css"/>
+  <link rel="stylesheet" type="text/css" href="css/bottom.css"/>
 </head>
 <body>
 <div id="header">
   <div id="header_con">
     <p id="logo">动漫鉴赏</p>
     <audio id="musicfx" loop="loop" autoplay="autoplay">
-      <source src="../music/主角.mp3" type="audio/mp3" id="hhh">
+      <source src="music/主角.mp3" type="audio/mp3" id="hhh">
     </audio>
     <ul>
       <li><a href="index.html">首页</a></li>
-      <li><a href="index2.html">斗破苍穹</a></li>
-      <li><a href="index3.html">大千世界</a></li>
-      <li><a href="index4.html">彩炎之结</a></li>
-      <li><a href="index5.html">帮助反馈</a></li>
+      <li><a href="html/index2.html">斗破苍穹</a></li>
+      <li><a href="html/index3.html">大千世界</a></li>
+      <li><a href="html/index4.html">彩炎之结</a></li>
+      <li><a href="html/index5.html">帮助反馈</a></li>
     </ul>
   </div>
 </div>
@@ -28,36 +28,36 @@
     <h3>动漫推荐</h3>
     <div class="nr">
       <div class="img-nr">
-        <img src="../img/img9.jpg">
+        <img src="img/img9.jpg">
       </div>
       <div class="nr-text">
         <h4>《 斗破苍穹 》</h4>
         <p>
           《斗破苍穹》是网络作家天蚕土豆所著的系列长篇玄幻小说，首次在2009年4月14日于起点中文网连载，于2011年7月20日完结，首次由湖北少年儿童出版社于2014年5月4日出版。</p>
-        <button type="button"><a href="index2.html">GO!</a></button>
+        <button type="button"><a href="html/index2.html">GO!</a></button>
       </div>
     </div>
     <div class="nr">
       <div class="img-nr">
-        <img src="../img/xx.jpg">
+        <img src="img/xx.jpg">
       </div>
       <div class="nr-text">
         <h4>《 大千世界 》</h4>
         <p>
           中州之战，炎帝御宇天下，成大陆至尊当斗帝消失之谜解开大世界，精彩绝伦。呈现的是另一个通往至尊之路在新的世界，气吞八荒，斗破苍穹大世界，唯吾独尊，萧炎和其他4人失散，被洛神族的老祖所帮助，成功将自己的斗气换成了大千世界的灵力，很快就凭着自己准天至尊的实力和难以形容的炼丹术在大千世界混得风生水起。在和失散的4人会合之后创立了自己的大势力无尽火域，还抽空回了趟老家把家里人接了过来，一边卖药一边和各大势力火拼，最终确立了自己的地位。</p>
-        <button type="button"><a href="index3.html">GO!</a></button>
+        <button type="button"><a href="html/index3.html">GO!</a></button>
       </div>
     </div>
     <div class="nr">
       <div class="img-nr">
-        <img src="../img/img7.jpg">
+        <img src="img/img7.jpg">
       </div>
       <div class="nr-text">
         <h4>《 缘起斗破 》</h4>
         <p>《斗破苍穹》的故事发生在一个充满“斗气”的大陆上，讲述了名为萧炎的少年，年少时被视为废物，接着奋起抗争，凭借自身努力、高人指导、奇珍异宝的帮助，不断收集“异火”，持续提升
           丹药 炼制水平和斗气修炼水平的故事。
           最后，主角萧炎不仅洗刷当年的耻辱，还一跃成为斗气大陆上的最强者——“斗帝”，成为该世界秩序守护者和最高权力拥有者。</p>
-        <button type="button"><a href="index4.html">GO!</a></button>
+        <button type="button"><a href="html/index4.html">GO!</a></button>
       </div>
     </div>
   </div>
